fix overflow scrolling

--- a/web/src/components/PassiveTreeViewer/styles.module.css
+++ b/web/src/components/PassiveTreeViewer/styles.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  min-height: 10rem;
 }
 
 .viewport {
