--- a/web/src/components/Sidebar/styles.module.css
+++ b/web/src/components/Sidebar/styles.module.css
@@ -42,7 +42,6 @@
   display: flex;
   flex-direction: column;
   overflow: auto;
-  overscroll-behavior: contain;
   padding: var(--size-1);
   width: 20rem;
 }
@@ -53,8 +52,8 @@
 
 .content {
   display: flex;
-  min-height: 10rem;
-  width: 100%;
+  overflow: auto;
+  overscroll-behavior: contain;
 }
 
 .hidden {
